<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beauty_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/red_title" >

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:background="@color/transparent"
            android:gravity="center"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dip"
            android:text="@string/setting_title"
            android:textColor="@android:color/white"
            android:textSize="22dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_gongneng"
            android:textColor="@color/green_txt"
            android:textSize="20dp" />

        <RelativeLayout
            android:id="@+id/btn_huazhi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/settings_line1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:text="@string/setting_quality"
                android:textColor="@color/gray" />

            <ImageView
                android:id="@+id/quality_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dip"
                android:background="@drawable/settings_arrow" />
            <TextView
                android:id="@+id/text_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                android:layout_toLeftOf="@id/quality_arrow"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/setting_save"
            android:textColor="@color/green_txt"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/settings_line2"
            android:orientation="vertical" >

            <!-- 是否自动保存 -->

            <RelativeLayout
                android:id="@+id/btn_save_auto"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dip"
                    android:text="@string/setting_save_column1"
                    android:textColor="@color/gray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/settings_arrow" />
            </RelativeLayout>
            <!-- 保存路径 -->

            <RelativeLayout
                android:id="@+id/btn_save_path"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dip"
                    android:text="@string/setting_save_column2"
                    android:textColor="@color/gray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/settings_arrow" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/setting_other"
            android:textColor="@color/green_txt"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/settings_line2"
            android:orientation="vertical" >

            <!-- 检查更新 -->

            <RelativeLayout
                android:id="@+id/btn_check_update"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dip"
                    android:text="@string/setting_update"
                    android:textColor="@color/gray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/settings_arrow" />
            </RelativeLayout>
            <!-- 关于图丫 -->

            <RelativeLayout
                android:id="@+id/btn_about_tuya"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dip"
                    android:text="@string/setting_about"
                    android:textColor="@color/gray" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/settings_arrow" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>